fix controls overlap

--- a/src/app/pages/player/player.component.scss
+++ b/src/app/pages/player/player.component.scss
@@ -14,23 +14,24 @@
   }
 }
 
-.container {
-  height:100%;
-
-  .main-toolbar {
-    height: 10%;
-    .spacer {
-      flex: 1 1 auto;
-    }
-    .toolbar-btn {
-      font-size: 16px;
-      margin-right: 5px;
-      cursor: pointer;
-    }
+.main-toolbar {
+  height: 10%;
+  .spacer {
+    flex: 1 1 auto;
   }
+  .toolbar-btn {
+    font-size: 16px;
+    margin-right: 5px;
+    cursor: pointer;
+  }
+}
+
+.container {
+  height:75%;
+  display: flex;
+  flex-direction: column;
 
   .gameInfo {
-    height:15%;
     padding-left: 5px;
   }
 
@@ -39,31 +40,30 @@
   }
 
   .gameSpace {
-    overflow-y: scroll;
-    height:60%;
+    overflow-y:scroll;
   }
+}
 
-  .media-footer {
-    position: absolute;
-    bottom: 0;
+.media-footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 15%;
+  mat-toolbar{
+    height: 100%;
+  }
+  .time-slider {
+    width: 100% !important;
+    margin-left: 20px;
+    margin-right: 20px;
+  }
+  .media-action-bar {
     width: 100%;
-    height: 15%;
-    mat-toolbar{
-      height: 100%;
-    }
-    .time-slider {
-      width: 100% !important;
-      margin-left: 20px;
-      margin-right: 20px;
-    }
-    .media-action-bar {
-      width: 100%;
-      justify-content: center;
-      .mat-icon {
-        height: 48px !important;
-        width: 48px !important;
-        font-size: 48px !important;
-      }
+    justify-content: center;
+    .mat-icon {
+      height: 48px !important;
+      width: 48px !important;
+      font-size: 48px !important;
     }
   }
 }
